--- a/Editions/TEI_GallusPugnans_latin.html
+++ b/Editions/TEI_GallusPugnans_latin.html
@@ -1,7 +1,7 @@
 <html xmlns:tei="http://www.tei-c.org/ns/1.0">
    <head>
       <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-      <link rel="stylesheet" type="text/css" href="GallusPugnans_htmlmonolingue.css">
+      <link rel="stylesheet" type="text/css" href=".\GallusPugnans_htmlmonolingue.css">
       <title>Joachim Vadianus, Gallus Pugnans</title>
    </head>
    <body>
